--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 output_files/
 O1minus_output_files/
+O1minus_output_files_2/
+O1minus_output_files_old/
 O1minus/
 O0plus/
 O0plus_output_files/
+O0plus_output_files_1/
+O0plus_output_files_old/
+*.jpg
+*.tar.gz
