new notebook for cross matrices

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ O1minus_output_files/
 O1minus_output_files_2/*
 O1minus_output_files_2/
 O1minus_output_files_old/
+O1minus_output_files_new/
 O1minus/
 O0plus/
 O0plus_output_files/
